--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^2.12.0
   fl_country_code_picker: ^0.1.9+1
   firebase_auth: ^4.16.0
+  pinput: ^3.0.1
+  shared_preferences: ^2.2.2
+  cloud_firestore: ^4.13.6
 
 dev_dependencies:
   flutter_test:
