--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,9 @@ dependencies:
   pinput: ^3.0.1
   shared_preferences: ^2.2.2
   cloud_firestore: ^4.13.6
-
+  uuid: ^3.0.4
+  provider: ^6.1.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
