--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cloud_firestore: ^4.13.6
   uuid: ^3.0.4
   provider: ^6.1.2
+  google_maps_flutter: ^2.5.0
+  google_places_flutter: ^2.0.6
   
 dev_dependencies:
   flutter_test:
